--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="hello">Hello user,</string>
     <string name="create_account">Create an account</string>
     <string name="welcome_back">Welcome back</string>
-    <string name="first_name">First name</string>
+    <string name="first_name">Username</string>
     <string name="last_name">Last name</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
